// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CabinetMenu /> should renders properly w/o user name 1`] = `
<CabinetMenu
  avatar="http://themoviescore.com/wp-content/uploads/2013/08/ff072a39a2709e4fec2cd05e3763d68d.jpg"
  items={
    Array [
      Object {
        "icon": "https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/main-page.svg",
        "name": "Главная",
        "url": "/0",
      },
      Object {
        "icon": "https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/payment.svg",
        "isCurrent": true,
        "isMarked": false,
        "name": "Заказы",
        "url": "/1",
      },
      Object {
        "icon": "https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/notification.svg",
        "isMarked": true,
        "name": "Уведомления",
        "url": "/2",
      },
      Object {
        "icon": "https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/mark-heart.svg",
        "isMarked": false,
        "name": "Лист ожидания",
        "url": "/3",
      },
      Object {
        "icon": "https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/feedback.svg",
        "isMarked": false,
        "name": "Отзывы и вопросы",
        "url": "/4",
      },
      Object {
        "icon": "https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/statement.svg",
        "isMarked": false,
        "name": "Претензии",
        "url": "/5",
      },
      Object {
        "icon": "https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/united-customers.svg",
        "isMarked": false,
        "name": "Профиль организатора",
        "url": "/6",
      },
    ]
  }
  onReportClick={[MockFunction]}
  settingsLink="/"
>
  <div
    className="wrap"
  >
    <ForwardRef(Link)
      aria-label="Настройки"
      className="avatar-wrap"
      href="/"
    >
      <a
        aria-label="Настройки"
        className="link avatar-wrap color__brand-blue hover-color__brand-deep-blue"
        data-testid="anchor"
        href="/"
      >
        <UserAvatar
          imageUrl="http://themoviescore.com/wp-content/uploads/2013/08/ff072a39a2709e4fec2cd05e3763d68d.jpg"
          size={56}
        >
          <Avatar
            bgColor="additional-deep-red"
            bgOpacity={0.48}
            imageUrl="http://themoviescore.com/wp-content/uploads/2013/08/ff072a39a2709e4fec2cd05e3763d68d.jpg"
            size={56}
            textColor="white"
          >
            <div
              className="root size-56 color__white"
              data-testid="avatar"
              style={
                Object {
                  "--avatar-color": undefined,
                  "--avatar-color-opacity": 0.48,
                }
              }
            >
              <img
                alt=""
                className="layer image"
                onError={[Function]}
                src="http://themoviescore.com/wp-content/uploads/2013/08/ff072a39a2709e4fec2cd05e3763d68d.jpg"
              />
              <div
                className="layer image-overlay"
              />
            </div>
          </Avatar>
        </UserAvatar>
      </a>
    </ForwardRef(Link)>
    <ForwardRef(Link)
      className="user-info"
      href="/"
    >
      <a
        className="link user-info color__brand-blue hover-color__brand-deep-blue"
        data-testid="anchor"
        href="/"
      >
        <div
          className="name"
        >
          Имя не указано
        </div>
        <div
          className="settings"
        >
          Настройки
        </div>
      </a>
    </ForwardRef(Link)>
    <div
      className="items"
    >
      <ForwardRef(Link)
        className="item"
        color="gray38"
        href="/0"
        key="0"
      >
        <a
          className="link item color__gray38 hover-color__gray54"
          data-testid="anchor"
          href="/0"
        >
          <ReactSVG
            afterInjection={[Function]}
            aria-hidden="true"
            beforeInjection={[Function]}
            className="icon"
            evalScripts="never"
            fallback={null}
            loading={null}
            renumerateIRIElements={true}
            src="https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/main-page.svg"
            useRequestCache={true}
            wrapper="div"
          >
            <div
              aria-hidden="true"
              className="icon"
            />
          </ReactSVG>
          <div
            className="text"
          >
            Главная
          </div>
        </a>
      </ForwardRef(Link)>
      <ForwardRef(Link)
        className="item active"
        color="gray38"
        key="1"
      >
        <a
          className="link item active color__gray38 hover-color__gray54"
          data-testid="anchor"
        >
          <ReactSVG
            afterInjection={[Function]}
            aria-hidden="true"
            beforeInjection={[Function]}
            className="icon"
            evalScripts="never"
            fallback={null}
            loading={null}
            renumerateIRIElements={true}
            src="https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/payment.svg"
            useRequestCache={true}
            wrapper="div"
          >
            <div
              aria-hidden="true"
              className="icon"
            />
          </ReactSVG>
          <div
            className="text"
          >
            Заказы
          </div>
        </a>
      </ForwardRef(Link)>
      <ForwardRef(Link)
        className="item"
        color="gray38"
        href="/2"
        key="2"
      >
        <a
          className="link item color__gray38 hover-color__gray54"
          data-testid="anchor"
          href="/2"
        >
          <ReactSVG
            afterInjection={[Function]}
            aria-hidden="true"
            beforeInjection={[Function]}
            className="icon dot"
            evalScripts="never"
            fallback={null}
            loading={null}
            renumerateIRIElements={true}
            src="https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/notification.svg"
            useRequestCache={true}
            wrapper="div"
          >
            <div
              aria-hidden="true"
              className="icon dot"
            />
          </ReactSVG>
          <div
            className="text"
          >
            Уведомления
          </div>
        </a>
      </ForwardRef(Link)>
      <ForwardRef(Link)
        className="item"
        color="gray38"
        href="/3"
        key="3"
      >
        <a
          className="link item color__gray38 hover-color__gray54"
          data-testid="anchor"
          href="/3"
        >
          <ReactSVG
            afterInjection={[Function]}
            aria-hidden="true"
            beforeInjection={[Function]}
            className="icon"
            evalScripts="never"
            fallback={null}
            loading={null}
            renumerateIRIElements={true}
            src="https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/mark-heart.svg"
            useRequestCache={true}
            wrapper="div"
          >
            <div
              aria-hidden="true"
              className="icon"
            />
          </ReactSVG>
          <div
            className="text"
          >
            Лист ожидания
          </div>
        </a>
      </ForwardRef(Link)>
      <ForwardRef(Link)
        className="item"
        color="gray38"
        href="/4"
        key="4"
      >
        <a
          className="link item color__gray38 hover-color__gray54"
          data-testid="anchor"
          href="/4"
        >
          <ReactSVG
            afterInjection={[Function]}
            aria-hidden="true"
            beforeInjection={[Function]}
            className="icon"
            evalScripts="never"
            fallback={null}
            loading={null}
            renumerateIRIElements={true}
            src="https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/feedback.svg"
            useRequestCache={true}
            wrapper="div"
          >
            <div
              aria-hidden="true"
              className="icon"
            />
          </ReactSVG>
          <div
            className="text"
          >
            Отзывы и вопросы
          </div>
        </a>
      </ForwardRef(Link)>
      <ForwardRef(Link)
        className="item"
        color="gray38"
        href="/5"
        key="5"
      >
        <a
          className="link item color__gray38 hover-color__gray54"
          data-testid="anchor"
          href="/5"
        >
          <ReactSVG
            afterInjection={[Function]}
            aria-hidden="true"
            beforeInjection={[Function]}
            className="icon"
            evalScripts="never"
            fallback={null}
            loading={null}
            renumerateIRIElements={true}
            src="https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/statement.svg"
            useRequestCache={true}
            wrapper="div"
          >
            <div
              aria-hidden="true"
              className="icon"
            />
          </ReactSVG>
          <div
            className="text"
          >
            Претензии
          </div>
        </a>
      </ForwardRef(Link)>
      <ForwardRef(Link)
        className="item"
        color="gray38"
        href="/6"
        key="6"
      >
        <a
          className="link item color__gray38 hover-color__gray54"
          data-testid="anchor"
          href="/6"
        >
          <ReactSVG
            afterInjection={[Function]}
            aria-hidden="true"
            beforeInjection={[Function]}
            className="icon"
            evalScripts="never"
            fallback={null}
            loading={null}
            renumerateIRIElements={true}
            src="https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/united-customers.svg"
            useRequestCache={true}
            wrapper="div"
          >
            <div
              aria-hidden="true"
              className="icon"
            />
          </ReactSVG>
          <div
            className="text"
          >
            Профиль организатора
          </div>
        </a>
      </ForwardRef(Link)>
      <a
        className="item"
        onClick={[MockFunction]}
        role="button"
      >
        <ForwardRef(MailSVG)
          className="icon"
        >
          <svg
            className="icon"
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              clipRule="evenodd"
              d="M4.5 6.134A.995.995 0 015 6h14c.182 0 .353.049.5.134l-.03.018L12 10.821 4.53 6.152a1.03 1.03 0 00-.03-.018zM4 8.179V17a1 1 0 001 1h14a1 1 0 001-1V8.18l-7.47 4.668a1 1 0 01-1.06 0L4 8.179zM5 4a3 3 0 00-3 3v10a3 3 0 003 3h14a3 3 0 003-3V7a3 3 0 00-3-3H5z"
              fillRule="evenodd"
            />
          </svg>
        </ForwardRef(MailSVG)>
        <div
          className="text"
        >
          Сообщить о проблеме
        </div>
      </a>
    </div>
  </div>
</CabinetMenu>
`;

exports[`<CabinetMenu /> should renders properly with user name 1`] = `
<CabinetMenu
  avatar="http://themoviescore.com/wp-content/uploads/2013/08/ff072a39a2709e4fec2cd05e3763d68d.jpg"
  items={
    Array [
      Object {
        "icon": "https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/main-page.svg",
        "name": "Главная",
        "url": "/0",
      },
      Object {
        "icon": "https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/payment.svg",
        "isCurrent": true,
        "isMarked": false,
        "name": "Заказы",
        "url": "/1",
      },
      Object {
        "icon": "https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/notification.svg",
        "isMarked": true,
        "name": "Уведомления",
        "url": "/2",
      },
      Object {
        "icon": "https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/mark-heart.svg",
        "isMarked": false,
        "name": "Лист ожидания",
        "url": "/3",
      },
      Object {
        "icon": "https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/feedback.svg",
        "isMarked": false,
        "name": "Отзывы и вопросы",
        "url": "/4",
      },
      Object {
        "icon": "https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/statement.svg",
        "isMarked": false,
        "name": "Претензии",
        "url": "/5",
      },
      Object {
        "icon": "https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/united-customers.svg",
        "isMarked": false,
        "name": "Профиль организатора",
        "url": "/6",
      },
    ]
  }
  onReportClick={[MockFunction]}
  settingsLink="/"
  userName="test name"
>
  <div
    className="wrap"
  >
    <ForwardRef(Link)
      aria-label="Настройки"
      className="avatar-wrap"
      href="/"
    >
      <a
        aria-label="Настройки"
        className="link avatar-wrap color__brand-blue hover-color__brand-deep-blue"
        data-testid="anchor"
        href="/"
      >
        <UserAvatar
          imageUrl="http://themoviescore.com/wp-content/uploads/2013/08/ff072a39a2709e4fec2cd05e3763d68d.jpg"
          size={56}
          title="test name"
        >
          <Avatar
            bgColor="additional-deep-red"
            bgOpacity={0.48}
            imageUrl="http://themoviescore.com/wp-content/uploads/2013/08/ff072a39a2709e4fec2cd05e3763d68d.jpg"
            size={56}
            textColor="white"
            title="test name"
          >
            <div
              className="root size-56 color__white"
              data-testid="avatar"
              style={
                Object {
                  "--avatar-color": undefined,
                  "--avatar-color-opacity": 0.48,
                }
              }
            >
              <img
                alt=""
                className="layer image"
                onError={[Function]}
                src="http://themoviescore.com/wp-content/uploads/2013/08/ff072a39a2709e4fec2cd05e3763d68d.jpg"
              />
              <div
                className="layer image-overlay"
              />
            </div>
          </Avatar>
        </UserAvatar>
      </a>
    </ForwardRef(Link)>
    <ForwardRef(Link)
      className="user-info"
      href="/"
    >
      <a
        className="link user-info color__brand-blue hover-color__brand-deep-blue"
        data-testid="anchor"
        href="/"
      >
        <div
          className="name"
        >
          test name
        </div>
        <div
          className="settings"
        >
          Настройки
        </div>
      </a>
    </ForwardRef(Link)>
    <div
      className="items"
    >
      <ForwardRef(Link)
        className="item"
        color="gray38"
        href="/0"
        key="0"
      >
        <a
          className="link item color__gray38 hover-color__gray54"
          data-testid="anchor"
          href="/0"
        >
          <ReactSVG
            afterInjection={[Function]}
            aria-hidden="true"
            beforeInjection={[Function]}
            className="icon"
            evalScripts="never"
            fallback={null}
            loading={null}
            renumerateIRIElements={true}
            src="https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/main-page.svg"
            useRequestCache={true}
            wrapper="div"
          >
            <div
              aria-hidden="true"
              className="icon"
            />
          </ReactSVG>
          <div
            className="text"
          >
            Главная
          </div>
        </a>
      </ForwardRef(Link)>
      <ForwardRef(Link)
        className="item active"
        color="gray38"
        key="1"
      >
        <a
          className="link item active color__gray38 hover-color__gray54"
          data-testid="anchor"
        >
          <ReactSVG
            afterInjection={[Function]}
            aria-hidden="true"
            beforeInjection={[Function]}
            className="icon"
            evalScripts="never"
            fallback={null}
            loading={null}
            renumerateIRIElements={true}
            src="https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/payment.svg"
            useRequestCache={true}
            wrapper="div"
          >
            <div
              aria-hidden="true"
              className="icon"
            />
          </ReactSVG>
          <div
            className="text"
          >
            Заказы
          </div>
        </a>
      </ForwardRef(Link)>
      <ForwardRef(Link)
        className="item"
        color="gray38"
        href="/2"
        key="2"
      >
        <a
          className="link item color__gray38 hover-color__gray54"
          data-testid="anchor"
          href="/2"
        >
          <ReactSVG
            afterInjection={[Function]}
            aria-hidden="true"
            beforeInjection={[Function]}
            className="icon dot"
            evalScripts="never"
            fallback={null}
            loading={null}
            renumerateIRIElements={true}
            src="https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/notification.svg"
            useRequestCache={true}
            wrapper="div"
          >
            <div
              aria-hidden="true"
              className="icon dot"
            />
          </ReactSVG>
          <div
            className="text"
          >
            Уведомления
          </div>
        </a>
      </ForwardRef(Link)>
      <ForwardRef(Link)
        className="item"
        color="gray38"
        href="/3"
        key="3"
      >
        <a
          className="link item color__gray38 hover-color__gray54"
          data-testid="anchor"
          href="/3"
        >
          <ReactSVG
            afterInjection={[Function]}
            aria-hidden="true"
            beforeInjection={[Function]}
            className="icon"
            evalScripts="never"
            fallback={null}
            loading={null}
            renumerateIRIElements={true}
            src="https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/mark-heart.svg"
            useRequestCache={true}
            wrapper="div"
          >
            <div
              aria-hidden="true"
              className="icon"
            />
          </ReactSVG>
          <div
            className="text"
          >
            Лист ожидания
          </div>
        </a>
      </ForwardRef(Link)>
      <ForwardRef(Link)
        className="item"
        color="gray38"
        href="/4"
        key="4"
      >
        <a
          className="link item color__gray38 hover-color__gray54"
          data-testid="anchor"
          href="/4"
        >
          <ReactSVG
            afterInjection={[Function]}
            aria-hidden="true"
            beforeInjection={[Function]}
            className="icon"
            evalScripts="never"
            fallback={null}
            loading={null}
            renumerateIRIElements={true}
            src="https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/feedback.svg"
            useRequestCache={true}
            wrapper="div"
          >
            <div
              aria-hidden="true"
              className="icon"
            />
          </ReactSVG>
          <div
            className="text"
          >
            Отзывы и вопросы
          </div>
        </a>
      </ForwardRef(Link)>
      <ForwardRef(Link)
        className="item"
        color="gray38"
        href="/5"
        key="5"
      >
        <a
          className="link item color__gray38 hover-color__gray54"
          data-testid="anchor"
          href="/5"
        >
          <ReactSVG
            afterInjection={[Function]}
            aria-hidden="true"
            beforeInjection={[Function]}
            className="icon"
            evalScripts="never"
            fallback={null}
            loading={null}
            renumerateIRIElements={true}
            src="https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/statement.svg"
            useRequestCache={true}
            wrapper="div"
          >
            <div
              aria-hidden="true"
              className="icon"
            />
          </ReactSVG>
          <div
            className="text"
          >
            Претензии
          </div>
        </a>
      </ForwardRef(Link)>
      <ForwardRef(Link)
        className="item"
        color="gray38"
        href="/6"
        key="6"
      >
        <a
          className="link item color__gray38 hover-color__gray54"
          data-testid="anchor"
          href="/6"
        >
          <ReactSVG
            afterInjection={[Function]}
            aria-hidden="true"
            beforeInjection={[Function]}
            className="icon"
            evalScripts="never"
            fallback={null}
            loading={null}
            renumerateIRIElements={true}
            src="https://assets.static1-sima-land.com/ui-icons/24x24/Stroked/united-customers.svg"
            useRequestCache={true}
            wrapper="div"
          >
            <div
              aria-hidden="true"
              className="icon"
            />
          </ReactSVG>
          <div
            className="text"
          >
            Профиль организатора
          </div>
        </a>
      </ForwardRef(Link)>
      <a
        className="item"
        onClick={[MockFunction]}
        role="button"
      >
        <ForwardRef(MailSVG)
          className="icon"
        >
          <svg
            className="icon"
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              clipRule="evenodd"
              d="M4.5 6.134A.995.995 0 015 6h14c.182 0 .353.049.5.134l-.03.018L12 10.821 4.53 6.152a1.03 1.03 0 00-.03-.018zM4 8.179V17a1 1 0 001 1h14a1 1 0 001-1V8.18l-7.47 4.668a1 1 0 01-1.06 0L4 8.179zM5 4a3 3 0 00-3 3v10a3 3 0 003 3h14a3 3 0 003-3V7a3 3 0 00-3-3H5z"
              fillRule="evenodd"
            />
          </svg>
        </ForwardRef(MailSVG)>
        <div
          className="text"
        >
          Сообщить о проблеме
        </div>
      </a>
    </div>
  </div>
</CabinetMenu>
`;
